# cognitiv-coding-challenges

dna/: CMakeLists.txt  base.hpp  chromo_compare.hpp  fogsaa.cpp  fogsaa.hpp  pairwise_aligner.hpp  person.hpp  person_analyzer.cpp  person_analyzer.hpp  sequence_aligner.hpp  thread_pool.hpp
dna/test/: CMakeLists.txt  fake_person_factory.cpp  fake_person_factory.hpp  fake_stream.cpp  fake_stream.hpp  fake_stream_test.cpp  fogsaa.cpp  fogsaa.hpp  fogsaa_test.cpp  people_tests.cpp
